# rust_books

./: .gitignore  README.md
book_rust/async_test/: Cargo.toml
book_rust/cipher_cmd/: Cargo.toml
book_rust/rpn/: Cargo.toml
book_rust/sec_00/: Cargo.toml
book_rust/sec_01/: Cargo.toml
book_rust/sec_02/: Cargo.toml
book_rust/sec_03/: Cargo.toml
book_rust/sec_04/: Cargo.toml
book_rust/sec_06/: Cargo.toml  build.rs.tmp
book_rust/wasm_hello/: Cargo.toml
programing_rust/sec_02/: Cargo.toml
rust_in_action/sec_02/: Cargo.toml
rust_in_action/sec_03/: Cargo.toml
rust_in_action/sec_04/: main
rust_in_action/sec_05/: Cargo.toml
scraping/: Cargo.toml
scraping/src/: main.rs
scraping/src/domain/: card.rs
sec2/: Cargo.toml
sec2/src/: main.rs
sec3/: Cargo.toml
sec4/: Cargo.toml
sec5/: Cargo.toml
sec_06/: Cargo.toml
srodot/: Cargo.toml
the_book/: Cargo.toml
the_book/adder/src/: lib.rs
the_book/exercism/: Cargo.toml
the_book/exercism/src/: lib.rs
the_book/src/: main  main.rs  sec10_1  sec10_1.rs  sec10_2  sec10_2.rs  sec2.rs  sec3.rs  sec4  sec4.rs  sec4_2  sec4_2.rs  sec4_3  sec4_3.rs  sec5_1.rs  sec5_2  sec5_2.rs  sec6_1.rs  sec6_2.rs  sec6_3.rs  sec7.rs  sec8_1  sec8_1.rs  sec8_2  sec8_2.rs  sec8_3  sec8_3.rs  sec9_1  sec9_1.rs  sec9_2  sec9_2.rs
zero2prod/: Cargo.toml
zero2prod/migrations/: 20221113102327_create_subscriptions_table.sql
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs
zero2prod/src/routes/: health_check.rs  subscriptions.rs
zero2prod/tests/: health_check.rs
(+82 files in other folders)
