[package]
name = "scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
regex = "1.5.4"
reqwest = {version = "0.11.9", features = ["json", "blocking"]}
scraper = "0.12.0"
tokio = {version = "1.16.1", features = ["full"]}
